--- a/src/DynamoCoreWpf/Views/Core/NodeView.xaml
+++ b/src/DynamoCoreWpf/Views/Core/NodeView.xaml
@@ -9,8 +9,8 @@
              xmlns:controls="clr-namespace:Dynamo.Views"
              xmlns:fa="clr-namespace:FontAwesome5;assembly=FontAwesome5.Net" xmlns:dp1="clr-namespace:Dynamo.Properties;assembly=DynamoCore"
              Name="topControl"
-             Width="Auto"
-             Height="Auto"
+             Width="234.5px"
+             Height="189"
              x:FieldModifier="public"
              MouseEnter="OnNodeViewMouseEnter"
              MouseLeave="OnNodeViewMouseLeave"
@@ -25,22 +25,23 @@
           HorizontalAlignment="Left"
           x:FieldModifier="public"
           ContextMenuService.IsEnabled="false"
+          Height="189px"
+          Width="234.5px"
           Visibility="{Binding IsCollapsed, Converter={StaticResource InverseBoolToVisibilityConverter}}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" MinHeight="24" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="0" />
+            <RowDefinition Height="46px" />
+            <RowDefinition Height="102px" />
+            <RowDefinition Height="24px" MinHeight="24" />
+            <RowDefinition Height="12" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" MinWidth="10" />
-            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="98.5" />
+            <ColumnDefinition Width="55.5px" MinWidth="10" />
+            <ColumnDefinition Width="80.5" />
         </Grid.ColumnDefinitions>
 
-        <!--  CONTEXT MENU  -->
+        <!--  CONTEXT MENU  --><!--
         <Grid.ContextMenu>
             <ContextMenu Name="MainContextMenu"
                          x:FieldModifier="public"
@@ -49,11 +50,11 @@
                          Style="{StaticResource ContextMenuStyle}">
                 <ContextMenu.Resources>
                     <ResourceDictionary>
-                        <ResourceDictionary.MergedDictionaries>
+                        --><!--<ResourceDictionary.MergedDictionaries>
                             <ui:SharedResourceDictionary Source="{x:Static ui:SharedDictionaryManager.DynamoConvertersDictionaryUri}" />
                             <ui:SharedResourceDictionary Source="{x:Static ui:SharedDictionaryManager.DynamoModernDictionaryUri}" />
                             <ui:SharedResourceDictionary Source="{x:Static ui:SharedDictionaryManager.DynamoColorsAndBrushesDictionaryUri}" />
-                        </ResourceDictionary.MergedDictionaries>
+                        </ResourceDictionary.MergedDictionaries>--><!--
                         <Style TargetType="{x:Type MenuItem}">
                             <Setter Property="IsChecked" Value="{DynamicResource IsChecked}" />
                             <Setter Property="Height" Value="30" />
@@ -205,10 +206,10 @@
                     </ResourceDictionary>
                 </ContextMenu.Resources>
             </ContextMenu>
-        </Grid.ContextMenu>
+        </Grid.ContextMenu>-->
 
         <!--  Graphical Styling of Custom Nodes  -->
-        <Border Name="customNodeBorder0"
+        <!--<Border Name="customNodeBorder0"
                 Grid.Row="0"
                 Grid.ColumnSpan="3"
                 Height="8"
@@ -239,7 +240,7 @@
                          Path="IsCustomFunction"
                          UpdateSourceTrigger="PropertyChanged" />
             </Border.Visibility>
-        </Border>
+        </Border>-->
 
         <!--  Node Body Background  -->
         <Border Name="nodeBackground"
@@ -267,7 +268,7 @@
                        IsHitTestVisible="True"
                        MouseDown="NameBlock_OnMouseDown"
                        ToolTipService.ShowDuration="60000">
-                <Rectangle.ToolTip>
+                <!--<Rectangle.ToolTip>
                     <dynui:DynamoToolTip AttachmentSide="Top" Style="{DynamicResource ResourceKey=SLightToolTip}">
                         <Grid>
                             <StackPanel MaxWidth="320"
@@ -298,7 +299,7 @@
                             </StackPanel>
                         </Grid>
                     </dynui:DynamoToolTip>
-                </Rectangle.ToolTip>
+                </Rectangle.ToolTip>-->
             </Rectangle>
             <Border.Style>
                 <Style TargetType="Border">
@@ -323,21 +324,21 @@
                 Height="34">
                 <Rectangle.Style>
                     <Style TargetType="Rectangle">
-                        <Setter Property="Fill">
+                        <!--<Setter Property="Fill">
                             <Setter.Value>
                                 <ImageBrush ImageSource="{Binding ImageSource}" Stretch="UniformToFill" />
                             </Setter.Value>
-                        </Setter>
-                        <Style.Triggers>
-                            <!--  If no icon can be found, use default icon  -->
-                            <DataTrigger Binding="{Binding ImageSource, UpdateSourceTrigger=PropertyChanged}" Value="{x:Null}">
+                        </Setter>-->
+                        <!--<Style.Triggers>
+                            --><!--  If no icon can be found, use default icon  --><!--
+                            <DataTrigger Binding="{Binding ImageSource, UpdateSourceTrigger=PropertyChanged}" Value="{x:Null}">-->
                                 <Setter Property="Fill">
                                     <Setter.Value>
                                         <ImageBrush ImageSource="/DynamoCoreWpf;component/UI/Images/default-node-icon.png" Stretch="UniformToFill" />
                                     </Setter.Value>
                                 </Setter>
-                            </DataTrigger>
-                        </Style.Triggers>
+                            <!--</DataTrigger>
+                        </Style.Triggers>-->
                     </Style>
                 </Rectangle.Style>
             </Rectangle>
@@ -351,11 +352,10 @@
                        FontWeight="Medium"
                        Foreground="{StaticResource PrimaryCharcoal200Brush}"
                        IsHitTestVisible="False"
-                       Style="{Binding Path=DataContext.StopNodeViewOpacityAnimations, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type controls:WorkspaceView}}, Converter={StaticResource SZoomFadeControl}}"
                        Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"
                        Visibility="Visible"
                        TextAlignment="Center" />
-            <TextBox Name="EditableNameBox"
+            <!--<TextBox Name="EditableNameBox"
                      Margin="6,3,6,0"
                      VerticalAlignment="Center"
                      Background="{x:Null}"
@@ -369,9 +369,9 @@
                      LostFocus="EditableNameBox_OnLostFocus"
                      KeyDown="EditableNameBox_KeyDown"
                      Visibility="Collapsed"
-                     Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+                     Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>-->
             <!--  Ellipse sits within Grid to increase size of MouseOver/ToolTip area  -->
-            <Grid HorizontalAlignment="Right"
+            <!--<Grid HorizontalAlignment="Right"
                   VerticalAlignment="Center"
                   Panel.ZIndex="5"
                   Background="Transparent"
@@ -395,53 +395,57 @@
                         </Grid>
                     </dynui:DynamoToolTip>
                 </Grid.ToolTip>
-            </Grid>
+            </Grid>-->
         </DockPanel>
 
         <!--  INPUT PORTS  -->
-        <ItemsControl Name="inputPortControl"
+        <!--<ItemsControl Name="inputPortControl"
                       Grid.Row="2"
                       Grid.Column="0"
+                      Height="102px"
+                      Width="123.5px"
                       Margin="-25,3,0,0"
                       VerticalAlignment="Top"
                       HorizontalContentAlignment="Stretch"
                       Canvas.ZIndex="6"
                       ItemsSource="{Binding Path=InPorts}"
-                      Style="{StaticResource InOutPortControlStyle}" />
+                      Style="{StaticResource InOutPortControlStyle}" />-->
 
         <!--  OUTPUT PORTS  -->
-        <ItemsControl Name="outputPortControl"
+        <!--<ItemsControl Name="outputPortControl"
                       Grid.Row="2"
-                      Grid.Column="2"
+                      Grid.Column="2" 
+                      Height="34px"
+                      Width="82.5px"
                       Margin="{Binding OriginalName, Converter={StaticResource NodeOriginalNameToMarginConverter}}"
                       VerticalAlignment="Top"
                       HorizontalContentAlignment="Stretch"
                       Canvas.ZIndex="4"
                       ItemsSource="{Binding Path=OutPorts}"
-                      Style="{StaticResource InOutPortControlStyle}" />
+                      Style="{StaticResource InOutPortControlStyle}" />-->
 
-        <Grid Name="centralGrid"
+        <!--<Grid Name="centralGrid"
               Grid.Row="2"
               Grid.Column="1"
               Margin="6,6,6,3"
               VerticalAlignment="Top"
               Canvas.ZIndex="4">
 
-            <Grid.RowDefinitions>
+            --><!--<Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
+            </Grid.RowDefinitions>-->
 
             <!--  INPUT GRID  -->
-            <Grid Name="inputGrid"
+            <!--<Grid Name="inputGrid"
                   MinHeight="{Binding Source={x:Static configuration:Configurations.PortHeightInPixels}}"
                   HorizontalAlignment="Stretch"
                   VerticalAlignment="Stretch"
                   x:FieldModifier="public"
                   Canvas.ZIndex="5"
-                  IsEnabled="{Binding Path=IsInteractionEnabled}" />
-        </Grid>
+                  IsEnabled="{Binding Path=IsInteractionEnabled}" />--><!--
+        </Grid>-->
 
         <StackPanel Name="GlyphStackPanel"
                     Grid.Row="3"
@@ -451,7 +455,6 @@
                     HorizontalAlignment="Right"
                     VerticalAlignment="Bottom"
                     Canvas.ZIndex="4"
-                    Style="{Binding Path=DataContext.StopNodeViewOpacityAnimations, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type controls:WorkspaceView}}, Converter={StaticResource SZoomFadeControl}}"
                     FlowDirection="LeftToRight"
                     Orientation="Horizontal">
             <Grid x:Name="ExperimentalGlyph" 
@@ -506,7 +509,6 @@
                    FontFamily="{StaticResource ArtifaktElementRegular}"
                    FontSize="10px"
                    Foreground="{StaticResource NodeLacingGlyphBackground}"
-                   Style="{Binding Path=DataContext.StopNodeViewOpacityAnimations, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type controls:WorkspaceView}}, Converter={StaticResource SZoomFadeControl}}"
                    ToolTipService.ShowDuration="30000"
                    Visibility="{Binding Path=ArgumentLacing, Converter={StaticResource LacingToVisibilityConverter}}">
                 <Label.ToolTip>
@@ -525,8 +527,7 @@
                            Content="{Binding NumberOfDismissedAlerts, UpdateSourceTrigger=PropertyChanged}"
                            FontFamily="{StaticResource ArtifaktElementRegular}"
                            FontSize="10px"
-                           Foreground="Black"
-                           Style="{Binding Path=DataContext.StopNodeViewOpacityAnimations, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type controls:WorkspaceView}}, Converter={StaticResource SZoomFadeControl}}" />
+                           Foreground="Black"/>
                 </Border>
                 <Grid.Style>
                     <Style TargetType="Grid">
@@ -544,13 +545,13 @@
                 </Grid.Style>
             </Grid>
             <!-- Spacer for embedded resize thumb (visible only on resizable nodes) -->
-            <Border Width="16"
+            <!--<Border Width="16"
                     Height="16"
                     Background="Transparent"
                     BorderThickness="0"
                     IsHitTestVisible="False"
                     Visibility="{Binding Path=NodeModel.IsResizable, Converter={StaticResource BooleanToVisibilityCollapsedConverter}, Mode=OneWay}">
-            </Border>
+            </Border>-->
             
             <!-- Button to open node context menu from lower right corner -->
             <Button x:Name="OptionsButton"
@@ -595,7 +596,7 @@
             </Button>
         </StackPanel>
 
-        <Grid Name="PresentationGrid"
+        <!--<Grid Name="PresentationGrid"
               Grid.Row="2"
               Grid.Column="1"
               Margin="6,6,6,3"
@@ -604,8 +605,8 @@
               x:FieldModifier="public"
               Visibility="Collapsed"
               ZIndex="3">
-            <!--  DO NOT ERASE THIS GRID TO BE USED FOR PRESENTING IMAGES, 3D VIEWS, ETC.  -->
-        </Grid>
+            --><!--  DO NOT ERASE THIS GRID TO BE USED FOR PRESENTING IMAGES, 3D VIEWS, ETC.  --><!--
+        </Grid>-->
 
         <Border Name="nodeBorder"
                 Grid.Row="1"
@@ -619,7 +620,7 @@
                 IsHitTestVisible="False"
                 SnapsToDevicePixels="True" />
 
-        <!--  Displays when the node is Frozen/Warning/Error state and Zoom is above 0.4 -->
+        <!--  Displays when the node is Frozen/Warning/Error state and Zoom is above 0.4 --><!--
         <Border Name="nodeColorOverlayZoomIn"
                 Grid.Row="1"
                 Grid.RowSpan="4"
@@ -634,10 +635,10 @@
                                   AncestorType={x:Type controls:WorkspaceView}}, 
                                   Converter={StaticResource ZoomToOpacityConverter}}"
                 Style="{Binding Path=DataContext.StopNodeViewOpacityAnimations, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type controls:WorkspaceView}}, Converter={StaticResource SZoomFadeOutPreview}}"
-                Visibility="{Binding Path=IsFrozen, Converter={StaticResource BooleanToVisibilityCollapsedConverter}, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                Visibility="{Binding Path=IsFrozen, Converter={StaticResource BooleanToVisibilityCollapsedConverter}, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />-->
 
         <!--  Displays when the node cluster is Preivew state and Zoom is above 0.4 -->
-        <Border Name="nodeTransientColorOverlayZoomIn"
+        <!--<Border Name="nodeTransientColorOverlayZoomIn"
                 Grid.Row="1"
                 Grid.RowSpan="4"
                 Grid.ColumnSpan="3"
@@ -651,10 +652,10 @@
                                   AncestorType={x:Type controls:WorkspaceView}}, 
                                   Converter={StaticResource ZoomToOpacityConverter}}"
                 Style="{Binding Path=DataContext.StopNodeViewOpacityAnimations, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type controls:WorkspaceView}}, Converter={StaticResource SZoomFadeOutPreview}}"
-                Visibility="{Binding Path=IsTransient, Converter={StaticResource BooleanToVisibilityCollapsedConverter}, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                Visibility="{Binding Path=IsTransient, Converter={StaticResource BooleanToVisibilityCollapsedConverter}, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />-->
 
         <!--  Displays when the node is Frozen/Warning/Error state and Zoom is below 0.4 -->
-        <Border Name="nodeColorOverlayZoomOut"
+        <!--<Border Name="nodeColorOverlayZoomOut"
                 Grid.Row="1"
                 Grid.RowSpan="4"
                 Grid.ColumnSpan="3"
@@ -668,10 +669,10 @@
                 Visibility="{Binding Path=DataContext.Zoom, 
                                      RelativeSource={RelativeSource FindAncestor, 
                                      AncestorType={x:Type controls:WorkspaceView}}, 
-                                     Converter={StaticResource ZoomToVisibilityCollapsedConverter}}" />
+                                     Converter={StaticResource ZoomToVisibilityCollapsedConverter}}" />-->
 
         <!-- Grid containing the State overlay Glyphs in Zoomed Out state -->
-        <Grid
+        <!--<Grid
             Name="zoomGlyphsGrid"
             Grid.Row="0"
             Grid.RowSpan="4"
@@ -731,7 +732,7 @@
                            Visibility="{Binding ImgGlyphTwoSource, Converter={StaticResource EmptyToVisibilityCollapsedConverter}, UpdateSourceTrigger=PropertyChanged}" />
                 </Grid>
             </StackPanel>
-        </Grid>
+        </Grid>-->
         <!--  Displays when the node is selected  -->
         <Border Name="selectionBorder"
                 Grid.Row="1"
@@ -808,22 +809,22 @@
                    Fill="{Binding WarningBarColor, UpdateSourceTrigger=PropertyChanged}"
                    Visibility="{Binding NodeWarningBarVisible, Converter={StaticResource BooleanToVisibilityCollapsedConverter}, UpdateSourceTrigger=PropertyChanged}" />
 
-        <Canvas Name="expansionBay"
+        <!--<Canvas Name="expansionBay"
                 Grid.Row="5"
                 Grid.Column="0"
                 Grid.ColumnSpan="3"
                 Margin="0,4,0,0"
                 HorizontalAlignment="Left"
-                Background="Blue" />
+                Background="Blue" />-->
 
-        <Canvas Grid.Row="5"
+        <!--<Canvas Grid.Row="5"
                 Grid.Column="0"
                 Grid.ColumnSpan="3"
                 ClipToBounds="False"
                 Visibility="{Binding ShowDebugASTs, Converter={StaticResource BooleanToVisibilityCollapsedConverter}}">
             <Label HorizontalContentAlignment="Center" Content="{Binding ASTText}" />
 
-        </Canvas>
+        </Canvas>-->
         <Canvas Grid.Row="3" Canvas.ZIndex="51" 
                 HorizontalAlignment="Left"
                 VerticalAlignment="Bottom"
